--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://unpkg.com/vue@32"></script>
+    <script src="https://unpkg.com/vue@3"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
+
+    <div id="app">
+        <h1>{{messaggio}} questa è la prima repo {{altroMessaggio}}</h1>
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
