--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <h1>{{messaggio}} questa è la prima repo <span :class="coloreTesto">{{altroMessaggio}}</span></h1>
         <input type="text" v-model="messaggio">
         <button @click="cambiaColore()">Cambia colore al testo</button>
+
+
+        <input type="text" v-model="imgName">
+        <img :src="path" alt="">
     </div>
     <script src="js/script.js"></script>
 </body>
