--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <input type="text" v-model="imgName">
         <button @click="changeImg('newImgName')">Cambia immagine</button>
         <img :src="path + imgName" alt="">
+
+        <button @click="changeImg('none')">hide img</button>
+        <h4 v-show="isTestoShow">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem reiciendis repellat id. Omnis quisquam nostrum voluptates dolores consequuntur ex sit!</h4>
+
     </div>
     <script src="js/script.js"></script>
 </body>
